--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,12 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.idea/
+
+# SPHINX TUTORIAL: comment lines below
+docs/
+docsource/
+source/
+make.bat
+Makefile
+# SPHINX TUTORIAL: comment lines above
