--- a/.gitignore
+++ b/.gitignore
@@ -127,7 +127,15 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# pycharm and vscode configuration folders
 .idea/
+.vs/
+
+# yarn and mermaid.cli files
+package.json
+yarn.lock
+node_modules/
 
 # SPHINX TUTORIAL: comment lines below
 docs/
@@ -135,4 +143,5 @@ docsource/
 source/
 make.bat
 Makefile
+generate_all.sh
 # SPHINX TUTORIAL: comment lines above
